--- a/source/doc/syntax/_06_octal_binary.slim
+++ b/source/doc/syntax/_06_octal_binary.slim
@@ -1,5 +1,6 @@
 h4 六、八进制和二进制
 h5.subheader octal and binary literals
+p ES6 增加了二进制和八进制数值的新写法，分别用前缀 0b 和 0o 表示。
 .feature-content
   h5 1.八进制
   h5.subheader octal literals
