--- a/source/doc/syntax/_11_new_target.slim
+++ b/source/doc/syntax/_11_new_target.slim
@@ -13,7 +13,7 @@ h5.subheader new.target
           passed &= (new.target === undefined);
         }());
         console.log(passed);
-  //- p 结果为 true。
+  span.label.radius.warning 待测试
   h5 2.不能被赋值
   h5.subheader can't be assigned to
   pre
@@ -29,4 +29,5 @@ h5.subheader new.target
         } catch(e) {
           console.log(passed);
         }
-  
+  span.label.radius.warning 待测试
+    
