Modified functions content

--- a/source/doc/bindings/_02_let.slim
+++ b/source/doc/bindings/_02_let.slim
@@ -1,5 +1,6 @@
 h4 二、let
 h5.subheader let
+p ES6 新增了 let 命令，用来声明变量。它的用法与 var 类似，但有以下几个区别。
 .feature-content
   h5 1.基本支持
   h5.subheader basic support
