--- a/source/doc/bindings/_03_function_declaration.slim
+++ b/source/doc/bindings/_03_function_declaration.slim
@@ -8,4 +8,4 @@ h5.subheader block-level function declaration
          function f() { return 2; }
         }
         console.log(f() === 1);
-  
+  p 结果为 true。
