--- a/source/doc/built_ins/_01_typed_arrays.slim
+++ b/source/doc/built_ins/_01_typed_arrays.slim
@@ -153,8 +153,325 @@ h5.subheader typed arrays
         view.setFloat64(0, 0.1);
         console.log(view.getFloat64(0) === 0.1);
   p 结果为 true。
-  h5 18.
-  h5.subheader 
+  h5 18.%TypedArray%.from
+  h5.subheader %TypedArray%.from
   pre
     code.javascript
+      | console.log(typeof Int8Array.from === "function" &&
+        typeof Uint8Array.from === "function" &&
+        typeof Uint8ClampedArray.from === "function" &&
+        typeof Int16Array.from === "function" &&
+        typeof Uint16Array.from === "function" &&
+        typeof Int32Array.from === "function" &&
+        typeof Uint32Array.from === "function" &&
+        typeof Float32Array.from === "function" &&
+        typeof Float64Array.from === "function");
+  p 结果为 true。
+  h5 19.%TypedArray%.of
+  h5.subheader %TypedArray%.of
+  pre
+    code.javascript
+      | console.log(typeof Int8Array.of === "function" &&
+        typeof Uint8Array.of === "function" &&
+        typeof Uint8ClampedArray.of === "function" &&
+        typeof Int16Array.of === "function" &&
+        typeof Uint16Array.of === "function" &&
+        typeof Int32Array.of === "function" &&
+        typeof Uint32Array.of === "function" &&
+        typeof Float32Array.of === "function" &&
+        typeof Float64Array.of === "function");
+  p 结果为 true。
+  h5 20.%TypedArray%.prototype.subarray
+  h5.subheader %TypedArray%.prototype.subarray
+  pre
+    code.javascript
+      | console.log(typeof Int8Array.prototype.subarray === "function" &&
+        typeof Uint8Array.prototype.subarray === "function" &&
+        typeof Uint8ClampedArray.prototype.subarray === "function" &&
+        typeof Int16Array.prototype.subarray === "function" &&
+        typeof Uint16Array.prototype.subarray === "function" &&
+        typeof Int32Array.prototype.subarray === "function" &&
+        typeof Uint32Array.prototype.subarray === "function" &&
+        typeof Float32Array.prototype.subarray === "function" &&
+        typeof Float64Array.prototype.subarray === "function");
+  p 结果为 true。
+  h5 21.%TypedArray%.prototype.join
+  h5.subheader %TypedArray%.prototype.join
+  pre
+    code.javascript
+      | console.log(typeof Int8Array.prototype.join === "function" &&
+        typeof Uint8Array.prototype.join === "function" &&
+        typeof Uint8ClampedArray.prototype.join === "function" &&
+        typeof Int16Array.prototype.join === "function" &&
+        typeof Uint16Array.prototype.join === "function" &&
+        typeof Int32Array.prototype.join === "function" &&
+        typeof Uint32Array.prototype.join === "function" &&
+        typeof Float32Array.prototype.join === "function" &&
+        typeof Float64Array.prototype.join === "function");
+  p 结果为 true。
+  h5 22.%TypedArray%.prototype.indexOf
+  h5.subheader %TypedArray%.prototype.indexOf
+  pre
+    code.javascript
+      | console.log(typeof Int8Array.prototype.indexOf === "function" &&
+        typeof Uint8Array.prototype.indexOf === "function" &&
+        typeof Uint8ClampedArray.prototype.indexOf === "function" &&
+        typeof Int16Array.prototype.indexOf === "function" &&
+        typeof Uint16Array.prototype.indexOf === "function" &&
+        typeof Int32Array.prototype.indexOf === "function" &&
+        typeof Uint32Array.prototype.indexOf === "function" &&
+        typeof Float32Array.prototype.indexOf === "function" &&
+        typeof Float64Array.prototype.indexOf === "function");
+  p 结果为 true。
+  h5 23.%TypedArray%.prototype.lastIndexOf
+  h5.subheader %TypedArray%.prototype.lastIndexOf
+  pre
+    code.javascript
+      | console.log(typeof Int8Array.prototype.lastIndexOf === "function" &&
+        typeof Uint8Array.prototype.lastIndexOf === "function" &&
+        typeof Uint8ClampedArray.prototype.lastIndexOf === "function" &&
+        typeof Int16Array.prototype.lastIndexOf === "function" &&
+        typeof Uint16Array.prototype.lastIndexOf === "function" &&
+        typeof Int32Array.prototype.lastIndexOf === "function" &&
+        typeof Uint32Array.prototype.lastIndexOf === "function" &&
+        typeof Float32Array.prototype.lastIndexOf === "function" &&
+        typeof Float64Array.prototype.lastIndexOf === "function");
+  p 结果为 true。
+  h5 24.%TypedArray%.prototype.slice
+  h5.subheader %TypedArray%.prototype.slice
+  pre
+    code.javascript
+      | console.log(typeof Int8Array.prototype.slice === "function" &&
+        typeof Uint8Array.prototype.slice === "function" &&
+        typeof Uint8ClampedArray.prototype.slice === "function" &&
+        typeof Int16Array.prototype.slice === "function" &&
+        typeof Uint16Array.prototype.slice === "function" &&
+        typeof Int32Array.prototype.slice === "function" &&
+        typeof Uint32Array.prototype.slice === "function" &&
+        typeof Float32Array.prototype.slice === "function" &&
+        typeof Float64Array.prototype.slice === "function");
+  p 结果为 true。
+  h5 25.%TypedArray%.prototype.every
+  h5.subheader %TypedArray%.prototype.every
+  pre
+    code.javascript
+      | console.log(typeof Int8Array.prototype.every === "function" &&
+        typeof Uint8Array.prototype.every === "function" &&
+        typeof Uint8ClampedArray.prototype.every === "function" &&
+        typeof Int16Array.prototype.every === "function" &&
+        typeof Uint16Array.prototype.every === "function" &&
+        typeof Int32Array.prototype.every === "function" &&
+        typeof Uint32Array.prototype.every === "function" &&
+        typeof Float32Array.prototype.every === "function" &&
+        typeof Float64Array.prototype.every === "function");
+  p 结果为 true。
+  h5 26.%TypedArray%.prototype.filter
+  h5.subheader %TypedArray%.prototype.filter
+  pre
+    code.javascript
+      | console.log(typeof Int8Array.prototype.filter === "function" &&
+        typeof Uint8Array.prototype.filter === "function" &&
+        typeof Uint8ClampedArray.prototype.filter === "function" &&
+        typeof Int16Array.prototype.filter === "function" &&
+        typeof Uint16Array.prototype.filter === "function" &&
+        typeof Int32Array.prototype.filter === "function" &&
+        typeof Uint32Array.prototype.filter === "function" &&
+        typeof Float32Array.prototype.filter === "function" &&
+        typeof Float64Array.prototype.filter === "function");
+  p 结果为 true。
+  h5 27.%TypedArray%.prototype.forEach
+  h5.subheader %TypedArray%.prototype.forEach
+  pre
+    code.javascript
+      | console.log(typeof Int8Array.prototype.forEach === "function" &&
+        typeof Uint8Array.prototype.forEach === "function" &&
+        typeof Uint8ClampedArray.prototype.forEach === "function" &&
+        typeof Int16Array.prototype.forEach === "function" &&
+        typeof Uint16Array.prototype.forEach === "function" &&
+        typeof Int32Array.prototype.forEach === "function" &&
+        typeof Uint32Array.prototype.forEach === "function" &&
+        typeof Float32Array.prototype.forEach === "function" &&
+        typeof Float64Array.prototype.forEach === "function");
+  p 结果为 true。
+  h5 28.%TypedArray%.prototype.map
+  h5.subheader %TypedArray%.prototype.map
+  pre
+    code.javascript
+      | console.log(typeof Int8Array.prototype.map === "function" &&
+        typeof Uint8Array.prototype.map === "function" &&
+        typeof Uint8ClampedArray.prototype.map === "function" &&
+        typeof Int16Array.prototype.map === "function" &&
+        typeof Uint16Array.prototype.map === "function" &&
+        typeof Int32Array.prototype.map === "function" &&
+        typeof Uint32Array.prototype.map === "function" &&
+        typeof Float32Array.prototype.map === "function" &&
+        typeof Float64Array.prototype.map === "function");
+  p 结果为 true。
+  h5 29.%TypedArray%.prototype.reduce
+  h5.subheader %TypedArray%.prototype.reduce
+  pre
+    code.javascript
+      | console.log(typeof Int8Array.prototype.reduce === "function" &&
+        typeof Uint8Array.prototype.reduce === "function" &&
+        typeof Uint8ClampedArray.prototype.reduce === "function" &&
+        typeof Int16Array.prototype.reduce === "function" &&
+        typeof Uint16Array.prototype.reduce === "function" &&
+        typeof Int32Array.prototype.reduce === "function" &&
+        typeof Uint32Array.prototype.reduce === "function" &&
+        typeof Float32Array.prototype.reduce === "function" &&
+        typeof Float64Array.prototype.reduce === "function");
+  p 结果为 true。
+  h5 30.%TypedArray%.prototype.reduceRight
+  h5.subheader %TypedArray%.prototype.reduceRight
+  pre
+    code.javascript
+      | console.log(typeof Int8Array.prototype.reduceRight === "function" &&
+        typeof Uint8Array.prototype.reduceRight === "function" &&
+        typeof Uint8ClampedArray.prototype.reduceRight === "function" &&
+        typeof Int16Array.prototype.reduceRight === "function" &&
+        typeof Uint16Array.prototype.reduceRight === "function" &&
+        typeof Int32Array.prototype.reduceRight === "function" &&
+        typeof Uint32Array.prototype.reduceRight === "function" &&
+        typeof Float32Array.prototype.reduceRight === "function" &&
+        typeof Float64Array.prototype.reduceRight === "function");
+  p 结果为 true。
+  h5 31.%TypedArray%.prototype.reverse
+  h5.subheader %TypedArray%.prototype.reverse
+  pre
+    code.javascript
+      | console.log(typeof Int8Array.prototype.reverse === "function" &&
+        typeof Uint8Array.prototype.reverse === "function" &&
+        typeof Uint8ClampedArray.prototype.reverse === "function" &&
+        typeof Int16Array.prototype.reverse === "function" &&
+        typeof Uint16Array.prototype.reverse === "function" &&
+        typeof Int32Array.prototype.reverse === "function" &&
+        typeof Uint32Array.prototype.reverse === "function" &&
+        typeof Float32Array.prototype.reverse === "function" &&
+        typeof Float64Array.prototype.reverse === "function");
+  p 结果为 true。
+  h5 32.%TypedArray%.prototype.some
+  h5.subheader %TypedArray%.prototype.some
+  pre
+    code.javascript
+      | console.log(typeof Int8Array.prototype.some === "function" &&
+        typeof Uint8Array.prototype.some === "function" &&
+        typeof Uint8ClampedArray.prototype.some === "function" &&
+        typeof Int16Array.prototype.some === "function" &&
+        typeof Uint16Array.prototype.some === "function" &&
+        typeof Int32Array.prototype.some === "function" &&
+        typeof Uint32Array.prototype.some === "function" &&
+        typeof Float32Array.prototype.some === "function" &&
+        typeof Float64Array.prototype.some === "function");
+  p 结果为 true。
+  h5 33.%TypedArray%.prototype.sort
+  h5.subheader %TypedArray%.prototype.sort
+  pre
+    code.javascript
+      | console.log(typeof Int8Array.prototype.sort === "function" &&
+        typeof Uint8Array.prototype.sort === "function" &&
+        typeof Uint8ClampedArray.prototype.sort === "function" &&
+        typeof Int16Array.prototype.sort === "function" &&
+        typeof Uint16Array.prototype.sort === "function" &&
+        typeof Int32Array.prototype.sort === "function" &&
+        typeof Uint32Array.prototype.sort === "function" &&
+        typeof Float32Array.prototype.sort === "function" &&
+        typeof Float64Array.prototype.sort === "function");
+  span.label.radius.warning 待测试
+  h5 34.%TypedArray%.prototype.copyWithin
+  h5.subheader %TypedArray%.prototype.copyWithin
+  pre
+    code.javascript
+      | console.log(typeof Int8Array.prototype.copyWithin === "function" &&
+        typeof Uint8Array.prototype.copyWithin === "function" &&
+        typeof Uint8ClampedArray.prototype.copyWithin === "function" &&
+        typeof Int16Array.prototype.copyWithin === "function" &&
+        typeof Uint16Array.prototype.copyWithin === "function" &&
+        typeof Int32Array.prototype.copyWithin === "function" &&
+        typeof Uint32Array.prototype.copyWithin === "function" &&
+        typeof Float32Array.prototype.copyWithin === "function" &&
+        typeof Float64Array.prototype.copyWithin === "function");
+  p 结果为 true。
+  h5 35.%TypedArray%.prototype.find
+  h5.subheader %TypedArray%.prototype.find
+  pre
+    code.javascript
+      | console.log(typeof Int8Array.prototype.find === "function" &&
+        typeof Uint8Array.prototype.find === "function" &&
+        typeof Uint8ClampedArray.prototype.find === "function" &&
+        typeof Int16Array.prototype.find === "function" &&
+        typeof Uint16Array.prototype.find === "function" &&
+        typeof Int32Array.prototype.find === "function" &&
+        typeof Uint32Array.prototype.find === "function" &&
+        typeof Float32Array.prototype.find === "function" &&
+        typeof Float64Array.prototype.find === "function");
+  p 结果为 true。
+  h5 36.%TypedArray%.prototype.findIndex
+  h5.subheader %TypedArray%.prototype.findIndex
+  pre
+    code.javascript
+      | console.log(typeof Int8Array.prototype.findIndex === "function" &&
+        typeof Uint8Array.prototype.findIndex === "function" &&
+        typeof Uint8ClampedArray.prototype.findIndex === "function" &&
+        typeof Int16Array.prototype.findIndex === "function" &&
+        typeof Uint16Array.prototype.findIndex === "function" &&
+        typeof Int32Array.prototype.findIndex === "function" &&
+        typeof Uint32Array.prototype.findIndex === "function" &&
+        typeof Float32Array.prototype.findIndex === "function" &&
+        typeof Float64Array.prototype.findIndex === "function");
+  p 结果为 true。
+  h5 37.%TypedArray%.prototype.fill
+  h5.subheader %TypedArray%.prototype.fill
+  pre
+    code.javascript
+      | console.log(typeof Int8Array.prototype.fill === "function" &&
+        typeof Uint8Array.prototype.fill === "function" &&
+        typeof Uint8ClampedArray.prototype.fill === "function" &&
+        typeof Int16Array.prototype.fill === "function" &&
+        typeof Uint16Array.prototype.fill === "function" &&
+        typeof Int32Array.prototype.fill === "function" &&
+        typeof Uint32Array.prototype.fill === "function" &&
+        typeof Float32Array.prototype.fill === "function" &&
+        typeof Float64Array.prototype.fill === "function");
+  p 结果为 true。
+  h5 38.%TypedArray%.prototype.keys
+  h5.subheader %TypedArray%.prototype.keys
+  pre
+    code.javascript
+      | console.log(typeof Int8Array.prototype.keys === "function" &&
+        typeof Uint8Array.prototype.keys === "function" &&
+        typeof Uint8ClampedArray.prototype.keys === "function" &&
+        typeof Int16Array.prototype.keys === "function" &&
+        typeof Uint16Array.prototype.keys === "function" &&
+        typeof Int32Array.prototype.keys === "function" &&
+        typeof Uint32Array.prototype.keys === "function" &&
+        typeof Float32Array.prototype.keys === "function" &&
+        typeof Float64Array.prototype.keys === "function");
+  p 结果为 true。
+  h5 39.%TypedArray%.prototype.values
+  h5.subheader %TypedArray%.prototype.values
+  pre
+    code.javascript
+      | console.log(typeof Int8Array.prototype.values === "function" &&
+        typeof Uint8Array.prototype.values === "function" &&
+        typeof Uint8ClampedArray.prototype.values === "function" &&
+        typeof Int16Array.prototype.values === "function" &&
+        typeof Uint16Array.prototype.values === "function" &&
+        typeof Int32Array.prototype.values === "function" &&
+        typeof Uint32Array.prototype.values === "function" &&
+        typeof Float32Array.prototype.values === "function" &&
+        typeof Float64Array.prototype.values === "function");
+  p 结果为 true。
+  h5 40.%TypedArray%.prototype.entries
+  h5.subheader %TypedArray%.prototype.entries
+  pre
+    code.javascript
+      | console.log(typeof Int8Array.prototype.entries === "function" &&
+        typeof Uint8Array.prototype.entries === "function" &&
+        typeof Uint8ClampedArray.prototype.entries === "function" &&
+        typeof Int16Array.prototype.entries === "function" &&
+        typeof Uint16Array.prototype.entries === "function" &&
+        typeof Int32Array.prototype.entries === "function" &&
+        typeof Uint32Array.prototype.entries === "function" &&
+        typeof Float32Array.prototype.entries === "function" &&
+        typeof Float64Array.prototype.entries === "function");
   p 结果为 true。
